# chat-formatting

./: .gitignore  Cargo.toml  LICENSE-APACHE
examples/: ansify.rs  debug.rs  legacyfy.rs  textify.rs
src/: chat.rs  error.rs  formatting.rs  lib.rs  translator.rs
