[package]
name = "chat-formatting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_with = "2.2"

regex = "1"
once_cell = "1"
